--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,9 +1,9 @@
 .profile__info {
-    margin: 30px auto 36px;
+    padding: 30px 19px 36px;
 }
 
 @media screen and (min-width: 700px) {
     .profile__info {
-        margin: 0 auto 0 30px;
+        padding: 0 19px 0 30px;
     }
 }
