--- a/blocks/profile/__name-group/profile__name-group.css
+++ b/blocks/profile/__name-group/profile__name-group.css
@@ -1,4 +1,7 @@
 .profile__name-group {
-    display:inline-flex;
+    display: inline-flex;
     align-items: center;
+    padding: 0;
+    margin: 0;
 }
+
