--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -2,6 +2,10 @@
     font-weight: 500;
     font-size: 22px;
     margin: 0 10px 0 0;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
 }
 
 @media screen and (min-width: 700px) {
